fix gap styling

--- a/src/components/InventoriesFormStock/InventoriesFormStock.scss
+++ b/src/components/InventoriesFormStock/InventoriesFormStock.scss
@@ -7,7 +7,7 @@ select {
   appearance: none;
   background-image: url("../../assets/icons/arrow_drop_down-24px.svg");
   background-repeat: no-repeat;
-  background-position: calc(100% - 0.0625rem) center;
+  background-position: calc(100% - 0.75rem) center;
   padding-right: 1.25rem;
   position: relative;
 }
@@ -39,7 +39,11 @@ input:-webkit-autofill:focus {
   }
 
   &__availability {
-    padding-bottom: 1.5rem;
+
+    @include responsive(tablet){
+      padding-bottom: 1.5rem;
+    }
+
   }
 
   &__label {
